# opengl-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: application.h  camera.h  control.h  mesh.h  scene_demo.h  shader.h  shadow.h  shape.h  simple_renderer.h
shader/: gouraud.vs  phong.fs  phong.vs  point_shadow.fs  point_shadow.gs  point_shadow.vs
src/: application.cpp  camera.cpp  control.cpp  main.cpp  mesh.cpp  scene_demo.cpp  shader.cpp  shadow.cpp  shape.cpp  simple_renderer.cpp
